added more info

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <a href="https://www.instagram.com/goldsmithscomparts/" target="_blank">INSTAGRAM</a>
             <a href="https://twitter.com/EchoSystemsShow">TWITTER</a>
         </div>
+        <div class = "floating -15,8 central">
+            More Info 
+            Coming Soon   
+        </div>>
 
 <pre id = "pattern">
 So,-How-Is-s++osyyysyddoossyNdsyyoo//.--.-+ydNy+::::+mN//::-.............yymo:::
