improved map links, removed global div selector in css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
 
         <div class = "floating -20,-4 central">
-                <span id = "left"><a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">St James Hatcham</a></span>
-                    <span><a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">SE14 6AD</a></span>
-                <span id = "right">5—8 Sept 2019</span>
+                <div id = "maplinks"><a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">St James Hatcham</a>
+                <a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">SE14 6AD</a></div>
+                5—8 Sept 2019
         </div>
 
         <div class = "floating -1,0 central">
@@ -36,6 +36,7 @@
             <a href="https://www.instagram.com/goldsmithscomparts/" target="_blank">INSTAGRAM</a>
             <a href="https://twitter.com/EchoSystemsShow">TWITTER</a>
         </div>
+
         <div class = "floating -15,4 central">
             More Info 
             Coming Soon   
