#2 #28 begin header/footer

--- a/test/index.html
+++ b/test/index.html
@@ -13,28 +13,12 @@
         <!-- Container for the background ascii animation --> 
 </pre>
 
-        <div class = "floating -20,-8 central">
-            So, How Is
-            <span id = "thread">That</span>
-            Working For You?
+        <div class = "floating header">
+            So, How Is <span id = "thread">That</span> Working For You?
         </div>
 
-        <div class = "floating -1,-4 central">
-            Goldsmiths
-            Computational Arts
-            Degree Show 2019
-        </div>
-
-        <div class = "floating -20,0 central">
-                <span id = "left"><a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">St James Hatcham</a></span>
-                    <span><a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">SE14 6AD</a></span>
-                <span id = "right">5—8 Sept 2019</span>
-        </div>
-
-        <div class = "floating -1,4 central">
-            <a href="https://www.facebook.com/goldsmithscomparts/">FACEBOOK</a>
-            <a href="https://www.instagram.com/goldsmithscomparts/" target="_blank">INSTAGRAM</a>
-            <a href="https://twitter.com/EchoSystemsShow">TWITTER</a>
+        <div class = "floating footer">
+            goldsmiths computational arts 2019
         </div>
 
 <pre id = "pattern">
