#2 #28 header/footer style

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,8 @@
         </div>
 
         <div class = "floating footer">
-            goldsmiths computational arts 2019
+            <div id="footer-text">Goldsmiths Computational Arts 2019</div>
+            <div id="footer-location">St. James Hatcham Church, London SE14 6AD</div>
         </div>
 
 <pre id = "pattern">
