--- a/test/artist/artistname.html
+++ b/test/artist/artistname.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../css/style.css" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>So, How Is That Working For You? | Goldsmiths Computational Arts 2019 </title>
-        <script type="text/javascript" src="js/page.js"></script>
+        <script type="text/javascript" src="../js/page.js"></script>
     </head>
 
     <body>
