--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         </div>
 
         <div class = "floating -20,-2 central">
-            <div id = "maplinks"><a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">St James Hatcham</a>
-            <a href="https://www.openstreetmap.org/directions?from=&to=51.47369%2C-0.03806" title="Click for a map" target="_blank">SE14 6AD</a></div>
+            <div id = "maplinks"><a href="https://goo.gl/maps/NnGA3tGva1bGYWHH8" title="Click for a map" target="_blank">St James Hatcham</a>
+            <a href="https://goo.gl/maps/NnGA3tGva1bGYWHH8" title="Click for a map" target="_blank">SE14 6AD</a></div>
             5—8 Sept 2019
         </div>
 
         <div class = "floating -1,2 central">
-            <a href="https://www.facebook.com/goldsmithscomparts/">FACEBOOK</a>
+            <a href="https://www.facebook.com/events/468722533703227/ target="_blank">FACEBOOK</a>
             <a href="https://www.instagram.com/goldsmithscomparts/" target="_blank">INSTAGRAM</a>
-            <a href="https://twitter.com/EchoSystemsShow">TWITTER</a>
+            <a href="https://twitter.com/goldcomparts" target = "_blank">TWITTER</a>
         </div>
 
         <div class = "floating -15,6 central">
