Updated social links

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
 
         <div class = "floating -1,2 central">
-            <a href="https://www.facebook.com/events/468722533703227/ target="_blank">FACEBOOK</a>
+            <a href="https://www.facebook.com/events/468722533703227/" target="_blank">FACEBOOK</a>
             <a href="https://www.instagram.com/goldsmithscomparts/" target="_blank">INSTAGRAM</a>
-            <a href="https://twitter.com/goldcomparts" target = "_blank">TWITTER</a>
+            <a href="https://twitter.com/goldcomparts/" target = "_blank">TWITTER</a>
         </div>
 
         <div class = "floating -15,6 central">
