--- a/about/index.html
+++ b/about/index.html
@@ -19,16 +19,16 @@
         </style>            
         Please enable javascript to enjoy the full functionality of the site.
         </noscript><div class = "ascii header" id = "header">
-<div id="header-text"><a href="/">So, How Is <span id = "thread">That</span><span id="working-for-you">             Working For You?</span></a></div>
+<div id="header-text"><a href="/">So, How Is <span id = "thread"></span><span id="working-for-you">Working For You?</span></a><br/></div>
 </div>
 <div id="header-menu">
-
-<a href="/about/"class="active">ABOUT</a> | <a href="/map/">MAP</a> | <a href="/info/">INFO</a></div>
+    
+    <a href="/about/"class="active">ABOUT</a>&nbsp;<a href="/artists/">ARTISTS</a>&nbsp;<a href="/map/">MAP</a>&nbsp;<a href="/info/">INFO</a>&nbsp;<br id = "mob-break" /><a href="https://www.facebook.com/events/468722533703227/" target="_blank"></a>&nbsp;<a href="https://twitter.com/goldcomparts/" target="_blank"></a>&nbsp;<a href="https://www.instagram.com/goldsmithscomparts" target="_blank"></a>&nbsp;</div>
 <div class ="border" id = "border-left"></div>
         <div class ="border" id = "border-right"></div>
         
 <main role="main">
-<div id="single-content"><p><a href="/">← go back</a></p>
+<div id="single-content"><p><a href="/">←</a></p>
 
 <p>The MA/MFA Computational Arts final exhibition <em>So, how is that working for you?</em> aims to interrogate the relational tensions playing out within the newly-formed spaces of artistic and technological collaboration. Reflecting on critical provocations of what it means to create computationally, particularly in the current state of technological augmentations permeating the deeper substrates of our human existence, we ask the open-ended question: <em>So, how is that working for you?</em> in order to probe the potentiality of dislodging computation from its status as an instrument of increasingly coercive control and repurposing it within artistic discourses that aim to open up new avenues for alternative technological narratives.</p>
 
@@ -36,7 +36,7 @@
 
 <p><em>So, how is that working for you?</em> is a set of speculative responses to these themes, questions and tensions; providing a placeholder for what <em>that</em> may be and leaving open and inconclusive what may be considered as <em>working</em>, the exhibition invites the audience to explore potential answers to this question alongside the artists, through engaging with the works and delving into the overlaps, discrepancies and dialogues arising between them.</p>
 
-<p>Threads:</p>
+<p>THREADS:</p>
 
 <ul id = "about-thread-grid">
 <li><span class = 'intelligence'>INTELLIGENCE:</span>
@@ -67,7 +67,6 @@ As well as addressing ubiquitous and watchful technologies, this thread also inc
         <div class = "ascii footer" id = "footer">
 Goldsmiths Computational Arts 2019
 <div id="footer-location"><a href="https://goo.gl/maps/NnGA3tGva1bGYWHH8" target="_blank">St. James Hatcham Church, London SE14 6AD</a></div>
-<div id="footer-text"><a href="https://www.eventbrite.com/e/goldsmiths-computational-arts-mamfa-degree-show-2019-tickets-68690778969" target="_blank">RSVP</a> | <a href="https://www.facebook.com/events/468722533703227/" target="_blank">FACEBOOK</a> | <a href="https://twitter.com/goldcomparts/" target="_blank">TWITTER</a> | <a href="https://www.instagram.com/goldsmithscomparts" target="_blank">INSTAGRAM</a></div>
 </div>
 
         <pre id = "face-1">
