--- a/info/index.html
+++ b/info/index.html
@@ -19,36 +19,137 @@
         </style>            
         Please enable javascript to enjoy the full functionality of the site.
         </noscript><div class = "ascii header" id = "header">
-<div id="header-text"><a href="/">So, How Is <span id = "thread">That</span><span id="working-for-you">             Working For You?</span></a></div>
+<div id="header-text"><a href="/">So, How Is <span id = "thread"></span><span id="working-for-you">Working For You?</span></a><br/></div>
 </div>
 <div id="header-menu">
-
-<a href="/about/">ABOUT</a> | <a href="/map/">MAP</a> | <a href="/info/"class="active">INFO</a></div>
+    
+    <a href="/about/">ABOUT</a>&nbsp;<a href="/artists/">ARTISTS</a>&nbsp;<a href="/map/">MAP</a>&nbsp;<a href="/info/"class="active">INFO</a>&nbsp;<br id = "mob-break" /><a href="https://www.facebook.com/events/468722533703227/" target="_blank"></a>&nbsp;<a href="https://twitter.com/goldcomparts/" target="_blank"></a>&nbsp;<a href="https://www.instagram.com/goldsmithscomparts" target="_blank"></a>&nbsp;</div>
 <div class ="border" id = "border-left"></div>
         <div class ="border" id = "border-right"></div>
         
 <main role="main">
-<div id="single-content"><p>Opening times:</p>
+<div id="single-content"><p><a href="/">←</a></p>
 
-<p>Thursday 5th Sept<br />
-&nbsp;5pm&mdash;10pm<br />
-Friday 6th Sept<br />
-&nbsp;11am&mdash;8pm<br />
-Saturday 7th Sept<br />
-&nbsp;11am&mdash;8pm<br />
-Sunday 8th Sept<br />
-&nbsp;11am&mdash;5pm</p>
+<p>DATES: Thursday 5th&mdash;Sunday 8th Sept 2019<br />
+LOCATION: <a href="https://goo.gl/maps/NnGA3tGva1bGYWHH8" target="_blank">St. James Hatcham Church, London SE14 6AD</a><br />
+RSVP: Click <a href="https://www.eventbrite.com/e/goldsmiths-computational-arts-mamfa-degree-show-2019-tickets-68690778969" target="_blank">here</a> (Eventbrite)<br/></p>
 
-<p>Click <a href="https://www.eventbrite.com/e/goldsmiths-computational-arts-mamfa-degree-show-2019-tickets-68690778969" target="_blank">here</a> to RSVP via Eventbrite.</p>
+<p>TIMES:</p>
 
-<p>&mdash;&mdash;&mdash;</p>
+<ul id = "timings-grid">
+<li>
+THURSDAY<br/>
+5pm&mdash;10pm<br/>
+&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;<br/><br/>
+Performances:<br/><br/>
+7:00pm Irini &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kalaitzidi<br/>
+7:15pm Taoran Xu<br/>  
+7:30pm Benjamin &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sammon<br/>  
+7:45pm Valeria &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Radchenko<br/>
+8:00pm Chris Speed<br/>
+8:15pm David Williams<br/> 
+8:30pm Christina &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Karpodini<br/>
+8:45pm Andy Wang<br/> 
+9:00pm Adam He<br/><br/><br/>
 
-<p>Workshop:</p>
+</li>
 
-<p>Experience BOTHER from the point of view of the performer. BOTHER is an interactive and durational dance piece inviting the audience to influence, positively or negatively, the fate of the dancer in front of them. Workshop by Clemence Debaig. Click <a href="https://www.eventbrite.co.uk/e/dance-workshop-experience-bother-from-the-point-of-view-of-the-performer-tickets-70115546487" target="_blank">here</a> to RSVP via Eventbrite.</p>
+<li>
+FRIDAY<br/> 
+11am&mdash;8pm<br/>
+&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;<br/><br/>
 
-<p>Events and interventions of technological and critical inquiry will be held during the exhibition.
-<br><br><br><br><br><br><br><br></p>
+Performances:<br/><br/>
+
+5:00pm Irini &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kalaitzidi<br/>
+5:20pm Taoran Xu<br/>  
+5:40pm Benjamin &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sammon<br/>  
+6:00pm Valeria &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Radchenko<br/>
+6:30pm Chris Speed<br/>
+6:50pm David Williams<br/> 
+7:10pm Christina &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Karpodini<br/>
+7:30pm Andy Wang<br/> 
+7:50pm Adam He<br/><br/>
+
+Talks:<br/><br/>
+3pm&mdash;4pm<br/>
+Artist Talk (<span class = 'intelligence'><a href="/about/#about-thread-grid">INTELLIGENCE</a></span>)<br/>
+With Ankita Anand, Teodora Fartan and Julien Mercier<br/><br/><br/>
+<span class="timings-padding"><br/><br/></span>
+
+Workshops:<br/><br/>
+
+11am&mdash;1pm<br/>
+BOTHER<br/><br/>
+
+11:15am&mdash;12:15pm<br/>
+Mutable VR Installation<br/><br/><br/>
+</li>
+
+<li>
+SATURDAY<br>  
+11am&mdash;8pm<br/>
+&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;<br/><br/>
+
+
+Performances:<br/><br/>
+
+11:15am Irini &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kalaitzidi<br/>
+11:35am Taoran Xu<br/>  
+11:55am Benjamin &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sammon<br/>  
+12:15pm Valeria &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Radchenko<br/>
+12:40pm Chris Speed<br/>
+&nbsp;1:00pm David Williams<br/> 
+&nbsp;1:20pm Andy Wang<br/> 
+&nbsp;1:40pm Adam He<br/><br/>
+
+<span class="timings-padding"><br/></span>
+
+Talks:<br/><br/>
+
+3pm&mdash;4pm<br/>
+Artist Talk<br/>
+(<span class = 'embodiment'><a href="/about/#about-thread-grid">EMBODIMENT</a></span>, <span class = 'matter'><a href="/about/#about-thread-grid">MATTER</a></span>, <span class = 'narration'><a href="/about/#about-thread-grid">NARRATION</a></span>, <span class = 'intelligence'><a href="/about/#about-thread-grid">INTELLIGENCE</a></span>)<br/>
+With Batool Desouky, Panja Göbel, Rachel Max and Chris Speed<br/><br/>
+
+
+<span class="timings-padding"><br/></span>
+
+Workshops:<br/><br/>
+
+11am&mdash;1pm<br/>
+BOTHER<br/><br/><br/>
+
+</li>
+
+<li>
+SUNDAY<br>
+11am&mdash;5pm<br/>
+&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;<br/><br/>
+
+Performances:<br/><br/>
+
+Same as Saturday.<br/>
+
+<span class="timings-padding"><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></span>
+
+Talks:<br/><br>
+4pm&mdash;5pm Panel Discussion TBA<br/><br/><br/>
+</li>
+</ul>
+
+<p>WORKSHOP INFO:</p>
+
+<ul id = "workshop-info">
+<li>Dance workshop - experience BOTHER from the point of view of the performer.<br/><br/>
+BOTHER is an interactive and durational dance piece inviting the audience to influence, positively or negatively, the fate of the dancer in front of them. Workshop by <a href="/artists/clemence-debaig">Clemence Debaig</a>. Click <a href="https://www.eventbrite.co.uk/e/dance-workshop-experience-bother-from-the-point-of-view-of-the-performer-tickets-70115546487" target="_blank">here</a> to RSVP via Eventbrite.</li>
+<br/>
+<br/>
+<li>Mutable VR - post-human particle systems as a multichannel musical instrument.<br/><br/>
+Mutable VR is an immersive virtual reality installation and live performance by audiovisual artist <a href="/artists/chris-speed">Chris Speed</a>. Situated within the world-class Sonics Immersive Media Labs (SIML), Mutable VR utilises the space to its fullest potential through panoramic projection and surround sound. Conceptually inspired by wave–particle duality in quantum mechanics and posthuman phenomenology, this project explores an embodied experience of microsound. The artwork combines the latest VR technology with custom software to connect real time particle simulations to music and redefine how we perceive our bodies within virtual worlds. As the piece progresses, your hands will begin to evolve over time as the user is gradually diffracted into the environment.</li>
+</ul>
+
+<p><br><br><br></p>
 </div>
 </main>
 
@@ -56,7 +157,6 @@ Sunday 8th Sept<br />
         <div class = "ascii footer" id = "footer">
 Goldsmiths Computational Arts 2019
 <div id="footer-location"><a href="https://goo.gl/maps/NnGA3tGva1bGYWHH8" target="_blank">St. James Hatcham Church, London SE14 6AD</a></div>
-<div id="footer-text"><a href="https://www.eventbrite.com/e/goldsmiths-computational-arts-mamfa-degree-show-2019-tickets-68690778969" target="_blank">RSVP</a> | <a href="https://www.facebook.com/events/468722533703227/" target="_blank">FACEBOOK</a> | <a href="https://twitter.com/goldcomparts/" target="_blank">TWITTER</a> | <a href="https://www.instagram.com/goldsmithscomparts" target="_blank">INSTAGRAM</a></div>
 </div>
 
         <pre id = "face-1">
