new version with map

--- a/artists/abi-price/index.html
+++ b/artists/abi-price/index.html
@@ -38,6 +38,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = matter>MATTER</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=abi-price">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
