--- a/artists/annie-tådne/index.html
+++ b/artists/annie-tådne/index.html
@@ -42,6 +42,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = matter>MATTER</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=annie-t%25C3%25A5dne">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
