--- a/artists/baqi-ba/index.html
+++ b/artists/baqi-ba/index.html
@@ -38,6 +38,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = phenomenon>PHENOMENON</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=baqi-ba">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
