--- a/artists/benjamin-sammon/index.html
+++ b/artists/benjamin-sammon/index.html
@@ -40,6 +40,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = network>NETWORK</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=benjamin-sammon">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
