--- a/artists/elle-castle/index.html
+++ b/artists/elle-castle/index.html
@@ -36,6 +36,9 @@
             <p class ="section">
                 <a href="/about/#about-thread-grid"><span class = phenomenon>PHENOMENON</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=elle-castle">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
