--- a/artists/helena-wee/index.html
+++ b/artists/helena-wee/index.html
@@ -44,6 +44,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = intelligence>INTELLIGENCE</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=helena-wee">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
