--- a/artists/julien-mercier/index.html
+++ b/artists/julien-mercier/index.html
@@ -40,6 +40,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = surveillance>SURVEILLANCE</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=julien-mercier">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
