--- a/artists/luke-dash/index.html
+++ b/artists/luke-dash/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >Luke Dash</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=luke-dash">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
