--- a/artists/owen-planchart/index.html
+++ b/artists/owen-planchart/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >Owen Planchart</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=owen-planchart">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
