--- a/artists/sarah-song-xiaran/index.html
+++ b/artists/sarah-song-xiaran/index.html
@@ -42,6 +42,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = embodiment>EMBODIMENT</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=sarah-song-xiaran">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
