--- a/artists/shuai-xu/index.html
+++ b/artists/shuai-xu/index.html
@@ -40,6 +40,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = embodiement>EMBODIEMENT</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=shuai-xu">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
