--- a/artists/adam-he/index.html
+++ b/artists/adam-he/index.html
@@ -40,6 +40,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = phenomenon>PHENOMENON</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=adam-he">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
