--- a/artists/batool-desouky/index.html
+++ b/artists/batool-desouky/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >Batool Desouky</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=batool-desouky">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
