--- a/artists/chris-speed/index.html
+++ b/artists/chris-speed/index.html
@@ -36,6 +36,9 @@
             <p class ="section">
                 <a href="/about/#about-thread-grid"><span class = embodiment>EMBODIMENT</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=chris-speed">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
