--- a/artists/clemence-debaig/index.html
+++ b/artists/clemence-debaig/index.html
@@ -40,6 +40,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = embodiment>EMBODIMENT</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=clemence-debaig">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
