--- a/artists/david-williams/index.html
+++ b/artists/david-williams/index.html
@@ -42,6 +42,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = phenomenon>PHENOMENON</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=david-williams">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
