--- a/artists/dongyuan-liu/index.html
+++ b/artists/dongyuan-liu/index.html
@@ -38,6 +38,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = intelligence>INTELLIGENCE</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=dongyuan-liu">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
