--- a/artists/eevi-rutanen/index.html
+++ b/artists/eevi-rutanen/index.html
@@ -42,6 +42,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = intelligence>INTELLIGENCE</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=eevi-rutanen">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
