--- a/artists/elina-virdzinience/index.html
+++ b/artists/elina-virdzinience/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >Elina Virdzinience</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=elina-virdzinience">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
