--- a/artists/izzy-mclellan/index.html
+++ b/artists/izzy-mclellan/index.html
@@ -38,6 +38,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = network>NETWORK</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=izzy-mclellan">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
