--- a/artists/james-tregaskis/index.html
+++ b/artists/james-tregaskis/index.html
@@ -36,6 +36,9 @@
             <p class ="section">
                 <a href="/about/#about-thread-grid"><span class = surveillance>SURVEILLANCE</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=james-tregaskis">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
