--- a/artists/john-dore/index.html
+++ b/artists/john-dore/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >John Dore</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=john-dore">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
