--- a/artists/laura-traver/index.html
+++ b/artists/laura-traver/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >Laura Traver</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=laura-traver">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
