--- a/artists/panja-göbel/index.html
+++ b/artists/panja-göbel/index.html
@@ -40,6 +40,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = embodiment>EMBODIMENT</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=panja-g%25C3%25B6bel">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
