--- a/artists/petros-velousis/index.html
+++ b/artists/petros-velousis/index.html
@@ -38,6 +38,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = narration>NARRATION</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=petros-velousis">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
