--- a/artists/raphael-theolade/index.html
+++ b/artists/raphael-theolade/index.html
@@ -38,6 +38,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = embodiment>EMBODIMENT</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=raphael-theolade">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
