--- a/artists/rebecca-aston/index.html
+++ b/artists/rebecca-aston/index.html
@@ -34,6 +34,9 @@
             <p class ="section" >Rebecca Aston</p>
             <p class ="section"></p>
             <p class ="section"></p>
+            <p class = "section">
+                <a href = "/map/?highlight=rebecca-aston">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
