--- a/artists/valeria-radchenko/index.html
+++ b/artists/valeria-radchenko/index.html
@@ -44,6 +44,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = narration>NARRATION</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=valeria-radchenko">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
