--- a/artists/ziwei-wu/index.html
+++ b/artists/ziwei-wu/index.html
@@ -42,6 +42,9 @@
             
                 <a href="/about/#about-thread-grid"><span class = network>NETWORK</a></span><br>
             </p>
+            <p class = "section">
+                <a href = "/map/?highlight=ziwei-wu">GO TO MAP >></a>
+            </p>
         </div>
     </li>
     <li>
